Fixed icon alignement for achievements

--- a/src/screens/Main/_main.scss
+++ b/src/screens/Main/_main.scss
@@ -32,4 +32,18 @@
             width: 3em;
         }
     }
+
+    .achievements {
+        position: absolute;
+        top: 5em;
+        right: 0;
+
+        height: 100vh;
+        width: 10em;
+
+        .achievement-row {
+            position: relative;
+            height: 9em;
+        }
+    }
 }
